--- a/advertising-demo-app/app/src/main/res/layout/activity_product_creative.xml
+++ b/advertising-demo-app/app/src/main/res/layout/activity_product_creative.xml
@@ -7,11 +7,14 @@
     <TextView
         android:id="@+id/productCreativeResultTextView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/productCreativeResultTextView">
 
