--- a/advertising-demo-app/app/src/main/res/layout/activity_creative_fullscreen.xml
+++ b/advertising-demo-app/app/src/main/res/layout/activity_creative_fullscreen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.CreativeFullscreenActivity">
 
-    <tech.solutionarchitects.advertisingsdk.api.feature.creative.CreativeView
+    <tech.solutionarchitects.advertisingsdk.creative.presentation.CreativeView
         android:id="@+id/creativeView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
